Added a searchAll button

--- a/CMIS485/ProjectOne/selectCustomer.html
+++ b/CMIS485/ProjectOne/selectCustomer.html
@@ -3,7 +3,7 @@
 <title>Select a Customer Record</title>
 </head>
 <body>
-<h1>Select a Customer</h1>
+<h1>Enter Customer Name, or click list all records</h1>
 <p>Please enter the customers first and last name to select their record</p>
 <form action="selectCust.php" method="post">
   <p>First Name:
@@ -14,6 +14,7 @@
   </p>
   <p>
     <button type="submit">Search</button>
+    <button type="submit" name="searchAll">List All Records</button>
   </p>
 </form>
 </body>
