--- a/CMIS485/ProjectOne/selectCustomer.html
+++ b/CMIS485/ProjectOne/selectCustomer.html
@@ -13,7 +13,7 @@
     <input name="lastName" type="text" size="20">
   </p>
   <p>
-    <button type="submit">Search</button>
+    <button type="submit" name="search">Search</button>
     <button type="submit" name="searchAll">List All Records</button>
   </p>
 </form>
